新增第二张轮播图，修复某些情况下footer会重叠

--- a/oppo-web-ui/index.html
+++ b/oppo-web-ui/index.html
@@ -80,9 +80,9 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active ">
-        <img src="img/topbanner1-vertical.webp" class="img-responsive visible-xs-inline topbanner-vertical-img"
+        <img src="/oppo-web-ui/img/find-N-vertical.webp" class="img-responsive visible-xs-inline topbanner-vertical-img"
           alt="...">
-        <img src="img/topbanner1.webp" class="img-responsive hidden-xs" alt="...">
+        <img src="/oppo-web-ui/img/find-N.webp" class="img-responsive hidden-xs" alt="...">
         <div class="carousel-content container">
           <h2 class="title">OPPO Find N <br> 全新折叠旗舰</h2>
           <h3 class="subtitle">从尝鲜，到常用</h3>
@@ -92,10 +92,16 @@
         </div>
       </div>
       <div class="item">
-        <img src="img/topbanner2-vertical.jpg" class="img-responsive visible-xs-inline topbanner-vertical-img"
-          alt="...">
-        <div class="carousel-caption">
-          456
+        <img
+          src="/oppo-web-ui/img/find-x5-vertical.webp"
+          class="img-responsive visible-xs-inline topbanner-vertical-img" alt="...">
+        <img src="/oppo-web-ui/img/find-x5.webp" class="img-responsive hidden-xs" alt="...">
+        <div class="carousel-content container">
+          <h2 class="title">OPPO Find X5 系列</h2>
+          <h3 class="subtitle">一帧影像，动用两块芯片。</h3>
+          <a href="#" id="btn" class="btn" role="button" style="background-color: black;border-color: black;">了解更多</a>
+          <a href="#" id="btn-lg" class="btn btn-lg" role="button"
+            style="background-color: black;border-color: black;">了解更多</a>
         </div>
       </div>
     </div>
@@ -289,7 +295,8 @@
             <h4 class="panel-title">
               <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true"
                 aria-controls="collapseOne">
-                推荐产品 <span class="glyphicon glyphicon-plus oppo-tablist-icon"></span>
+                推荐产品
+                <!-- <span class="glyphicon glyphicon-plus oppo-tablist-icon"></span> -->
               </a>
             </h4>
           </div>
