--- a/oppo-web-ui/index.html
+++ b/oppo-web-ui/index.html
@@ -92,8 +92,7 @@
         </div>
       </div>
       <div class="item">
-        <img
-          src="/oppo-web-ui/img/find-x5-vertical.webp"
+        <img src="/oppo-web-ui/img/find-x5-vertical.webp"
           class="img-responsive visible-xs-inline topbanner-vertical-img" alt="...">
         <img src="/oppo-web-ui/img/find-x5.webp" class="img-responsive hidden-xs" alt="...">
         <div class="carousel-content container">
@@ -441,7 +440,5 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
   integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 <script src="https://cdn.bootcss.com/salvattore/1.0.9/salvattore.min.js"></script>
-
-
 
 </html>
